xsm_expl/stage_8/task_1/y.output
   0  $accept : program $end

   1  program : TypeDefBlock ClassdefBlock GdeclBlock FdefBlock MainBlock
   2          | TypeDefBlock ClassdefBlock GdeclBlock MainBlock

   3  TypeDefBlock : TYPE TypeDefList ENDTYPE
   4               |

   5  TypeDefList : TypeDefList TypeDef
   6              | TypeDef

   7  TypeDef : ID '{' FieldDeclList '}'

   8  FieldDeclList : FieldDeclList FieldDecl
   9                | FieldDecl

  10  FieldDecl : TypeName ID COLON

  11  ClassdefBlock : CLASS ClassDefList ENDCLASS
  12                |

  13  ClassDefList : ClassDefList ClassDef
  14               | ClassDef

  15  ClassDef : Cname '{' DECL Fieldlists MethodDecl ENDDECL MethodDefns '}'
  16           | Cname '{' DECL MethodDecl ENDDECL MethodDefns '}'
  17           | Cname '{' DECL Fieldlists ENDDECL '}'

  18  Cname : ID
  19        | ID EXTENDS ID

  20  Fieldlists : Fieldlists Fld
  21             | Fld

  22  Fld : INT ID COLON
  23      | STR ID COLON
  24      | ID ID COLON

  25  MethodDecl : MethodDecl MDecl
  26             | MDecl

  27  MDecl : ID ID '(' MDeclParamList ')' COLON
  28        | INT ID '(' MDeclParamList ')' COLON
  29        | STR ID '(' MDeclParamList ')' COLON

  30  CParamList : CParamList COMMA CParam
  31             | CParam
  32             |

  33  MDeclParamList : MDeclParamList COMMA MDeclParam
  34                 | MDeclParam
  35                 |

  36  CParam : INT ID
  37         | STR ID
  38         | ID ID

  39  MDeclParam : INT ID
  40             | STR ID
  41             | ID ID

  42  MethodDefns : MethodDefns CFdef
  43              | CFdef

  44  CFdef : INT ID '(' CParamList ')' '{' LdeclBlock Body '}'
  45        | INT ID '(' CParamList ')' '{' Body '}'
  46        | STR ID '(' CParamList ')' '{' LdeclBlock Body '}'
  47        | STR ID '(' CParamList ')' '{' Body '}'
  48        | ID ID '(' CParamList ')' '{' LdeclBlock Body '}'
  49        | ID ID '(' CParamList ')' '{' Body '}'

  50  FieldFunction : Field '.' ID '(' ArgList ')'
  51                | Field '.' ID '(' ')'
  52                | ID '.' ID '(' ArgList ')'
  53                | ID '.' ID '(' ')'
  54                | SELF '.' ID '(' ArgList ')'
  55                | SELF '.' ID '(' ')'

  56  GdeclBlock : DECL GdeclList ENDDECL
  57             | DECL ENDDECL
  58             |

  59  GdeclList : GdeclList GDecl
  60            | GDecl

  61  GDecl : Type GidList COLON

  62  Type : INT
  63       | STR
  64       | ID

  65  GidList : GidList COMMA Gid
  66          | Gid

  67  Gid : ID
  68      | ID '[' NUM ']'
  69      | ID '(' GParamList ')'

  70  FdefBlock : FdefBlock Fdef
  71            | Fdef

  72  Fdef : Type ID '(' ParamList ')' '{' LdeclBlock Body '}'
  73       | Type ID '(' ParamList ')' '{' Body '}'

  74  LdeclBlock : DECL LDeclList ENDDECL
  75             | DECL ENDDECL

  76  LDeclList : LDeclList LDecl
  77            | LDecl

  78  LDecl : TypeName IdList COLON

  79  IdList : IdList COMMA ID
  80         | ID

  81  Body : START Slist END

  82  ParamList : ParamList COMMA Param
  83            | Param
  84            |

  85  Param : TypeName ID

  86  GParamList : GParamList COMMA GParam
  87             | GParam
  88             |

  89  GParam : TypeName ID

  90  MainBlock : INT MAIN '(' ')' '{' LdeclBlock Body '}'
  91            | INT MAIN '(' ')' '{' Body '}'

  92  Slist : Slist Stmt
  93        | Stmt

  94  Stmt : InputStmt
  95       | OutputStmt
  96       | AsgStmt
  97       | IfStmt
  98       | WhileStmt
  99       | BreakStmt
 100       | ContinueStmt
 101       | Retstmt
 102       | FreeStmt

 103  IfStmt : IF expr THEN Slist ELSE Slist ENDIF COLON
 104         | IF expr THEN Slist ENDIF COLON

 105  WhileStmt : WHILE expr DO Slist ENDWHILE COLON

 106  InputStmt : READ expr COLON

 107  OutputStmt : WRITE expr COLON

 108  AsgStmt : expr ASSG expr COLON

 109  BreakStmt : BREAK COLON

 110  ContinueStmt : CONT COLON

 111  FreeStmt : FREE expr COLON

 112  Retstmt : RETURN expr COLON

 113  String : STRING_TYPE

 114  expr : expr PLUS expr
 115       | expr MINUS expr
 116       | expr DIV expr
 117       | expr MUL expr
 118       | expr MOD expr
 119       | '(' expr ')'
 120       | expr LT expr
 121       | expr LE expr
 122       | expr GT expr
 123       | expr GE expr
 124       | expr EQ expr
 125       | expr NE expr
 126       | expr OR expr
 127       | expr AND expr
 128       | NUM
 129       | NULLVAL
 130       | ID
 131       | ID '[' expr ']'
 132       | ID '(' ')'
 133       | ID '(' ArgList ')'
 134       | Field
 135       | ALLOC '(' ')'
 136       | INITIALIZE '(' ')'
 137       | FieldFunction
 138       | NEW '(' ID ')'
 139       | DELETE '(' Field ')'
 140       | String

 141  Field : Field '.' ID
 142        | ID '.' ID
 143        | SELF '.' ID

 144  ArgList : ArgList COMMA expr
 145          | expr

 146  TypeName : INT
 147           | STR
 148           | ID

state 0
	$accept : . program $end  (0)
	TypeDefBlock : .  (4)

	TYPE  shift 1
	ID  reduce 4
	INT  reduce 4
	STR  reduce 4
	DECL  reduce 4
	CLASS  reduce 4

	program  goto 2
	TypeDefBlock  goto 3


state 1
	TypeDefBlock : TYPE . TypeDefList ENDTYPE  (3)

	ID  shift 4
	.  error

	TypeDefList  goto 5
	TypeDef  goto 6


state 2
	$accept : program . $end  (0)

	$end  accept


state 3
	program : TypeDefBlock . ClassdefBlock GdeclBlock FdefBlock MainBlock  (1)
	program : TypeDefBlock . ClassdefBlock GdeclBlock MainBlock  (2)
	ClassdefBlock : .  (12)

	CLASS  shift 7
	ID  reduce 12
	INT  reduce 12
	STR  reduce 12
	DECL  reduce 12

	ClassdefBlock  goto 8


state 4
	TypeDef : ID . '{' FieldDeclList '}'  (7)

	'{'  shift 9
	.  error


state 5
	TypeDefBlock : TYPE TypeDefList . ENDTYPE  (3)
	TypeDefList : TypeDefList . TypeDef  (5)

	ID  shift 4
	ENDTYPE  shift 10
	.  error

	TypeDef  goto 11


state 6
	TypeDefList : TypeDef .  (6)

	.  reduce 6


state 7
	ClassdefBlock : CLASS . ClassDefList ENDCLASS  (11)

	ID  shift 12
	.  error

	ClassDefList  goto 13
	ClassDef  goto 14
	Cname  goto 15


state 8
	program : TypeDefBlock ClassdefBlock . GdeclBlock FdefBlock MainBlock  (1)
	program : TypeDefBlock ClassdefBlock . GdeclBlock MainBlock  (2)
	GdeclBlock : .  (58)

	DECL  shift 16
	ID  reduce 58
	INT  reduce 58
	STR  reduce 58

	GdeclBlock  goto 17


state 9
	TypeDef : ID '{' . FieldDeclList '}'  (7)

	ID  shift 18
	INT  shift 19
	STR  shift 20
	.  error

	TypeName  goto 21
	FieldDeclList  goto 22
	FieldDecl  goto 23


state 10
	TypeDefBlock : TYPE TypeDefList ENDTYPE .  (3)

	.  reduce 3


state 11
	TypeDefList : TypeDefList TypeDef .  (5)

	.  reduce 5


state 12
	Cname : ID .  (18)
	Cname : ID . EXTENDS ID  (19)

	EXTENDS  shift 24
	'{'  reduce 18


state 13
	ClassdefBlock : CLASS ClassDefList . ENDCLASS  (11)
	ClassDefList : ClassDefList . ClassDef  (13)

	ID  shift 12
	ENDCLASS  shift 25
	.  error

	ClassDef  goto 26
	Cname  goto 15


state 14
	ClassDefList : ClassDef .  (14)

	.  reduce 14


state 15
	ClassDef : Cname . '{' DECL Fieldlists MethodDecl ENDDECL MethodDefns '}'  (15)
	ClassDef : Cname . '{' DECL MethodDecl ENDDECL MethodDefns '}'  (16)
	ClassDef : Cname . '{' DECL Fieldlists ENDDECL '}'  (17)

	'{'  shift 27
	.  error


state 16
	GdeclBlock : DECL . GdeclList ENDDECL  (56)
	GdeclBlock : DECL . ENDDECL  (57)

	ID  shift 28
	INT  shift 29
	STR  shift 30
	ENDDECL  shift 31
	.  error

	GdeclList  goto 32
	Type  goto 33
	GDecl  goto 34


state 17
	program : TypeDefBlock ClassdefBlock GdeclBlock . FdefBlock MainBlock  (1)
	program : TypeDefBlock ClassdefBlock GdeclBlock . MainBlock  (2)

	ID  shift 28
	INT  shift 35
	STR  shift 30
	.  error

	FdefBlock  goto 36
	MainBlock  goto 37
	Fdef  goto 38
	Type  goto 39


state 18
	TypeName : ID .  (148)

	.  reduce 148


state 19
	TypeName : INT .  (146)

	.  reduce 146


state 20
	TypeName : STR .  (147)

	.  reduce 147


state 21
	FieldDecl : TypeName . ID COLON  (10)

	ID  shift 40
	.  error


state 22
	TypeDef : ID '{' FieldDeclList . '}'  (7)
	FieldDeclList : FieldDeclList . FieldDecl  (8)

	ID  shift 18
	INT  shift 19
	STR  shift 20
	'}'  shift 41
	.  error

	TypeName  goto 21
	FieldDecl  goto 42


state 23
	FieldDeclList : FieldDecl .  (9)

	.  reduce 9


state 24
	Cname : ID EXTENDS . ID  (19)

	ID  shift 43
	.  error


state 25
	ClassdefBlock : CLASS ClassDefList ENDCLASS .  (11)

	.  reduce 11


state 26
	ClassDefList : ClassDefList ClassDef .  (13)

	.  reduce 13


state 27
	ClassDef : Cname '{' . DECL Fieldlists MethodDecl ENDDECL MethodDefns '}'  (15)
	ClassDef : Cname '{' . DECL MethodDecl ENDDECL MethodDefns '}'  (16)
	ClassDef : Cname '{' . DECL Fieldlists ENDDECL '}'  (17)

	DECL  shift 44
	.  error


state 28
	Type : ID .  (64)

	.  reduce 64


state 29
	Type : INT .  (62)

	.  reduce 62


state 30
	Type : STR .  (63)

	.  reduce 63


state 31
	GdeclBlock : DECL ENDDECL .  (57)

	.  reduce 57


state 32
	GdeclBlock : DECL GdeclList . ENDDECL  (56)
	GdeclList : GdeclList . GDecl  (59)

	ID  shift 28
	INT  shift 29
	STR  shift 30
	ENDDECL  shift 45
	.  error

	Type  goto 33
	GDecl  goto 46


state 33
	GDecl : Type . GidList COLON  (61)

	ID  shift 47
	.  error

	GidList  goto 48
	Gid  goto 49


state 34
	GdeclList : GDecl .  (60)

	.  reduce 60


state 35
	Type : INT .  (62)
	MainBlock : INT . MAIN '(' ')' '{' LdeclBlock Body '}'  (90)
	MainBlock : INT . MAIN '(' ')' '{' Body '}'  (91)

	MAIN  shift 50
	ID  reduce 62


state 36
	program : TypeDefBlock ClassdefBlock GdeclBlock FdefBlock . MainBlock  (1)
	FdefBlock : FdefBlock . Fdef  (70)

	ID  shift 28
	INT  shift 35
	STR  shift 30
	.  error

	MainBlock  goto 51
	Fdef  goto 52
	Type  goto 39


state 37
	program : TypeDefBlock ClassdefBlock GdeclBlock MainBlock .  (2)

	.  reduce 2


state 38
	FdefBlock : Fdef .  (71)

	.  reduce 71


state 39
	Fdef : Type . ID '(' ParamList ')' '{' LdeclBlock Body '}'  (72)
	Fdef : Type . ID '(' ParamList ')' '{' Body '}'  (73)

	ID  shift 53
	.  error


state 40
	FieldDecl : TypeName ID . COLON  (10)

	COLON  shift 54
	.  error


state 41
	TypeDef : ID '{' FieldDeclList '}' .  (7)

	.  reduce 7


state 42
	FieldDeclList : FieldDeclList FieldDecl .  (8)

	.  reduce 8


state 43
	Cname : ID EXTENDS ID .  (19)

	.  reduce 19


state 44
	ClassDef : Cname '{' DECL . Fieldlists MethodDecl ENDDECL MethodDefns '}'  (15)
	ClassDef : Cname '{' DECL . MethodDecl ENDDECL MethodDefns '}'  (16)
	ClassDef : Cname '{' DECL . Fieldlists ENDDECL '}'  (17)

	ID  shift 55
	INT  shift 56
	STR  shift 57
	.  error

	Fieldlists  goto 58
	Fld  goto 59
	MethodDecl  goto 60
	MDecl  goto 61


state 45
	GdeclBlock : DECL GdeclList ENDDECL .  (56)

	.  reduce 56


state 46
	GdeclList : GdeclList GDecl .  (59)

	.  reduce 59


state 47
	Gid : ID .  (67)
	Gid : ID . '[' NUM ']'  (68)
	Gid : ID . '(' GParamList ')'  (69)

	'('  shift 62
	'['  shift 63
	COLON  reduce 67
	COMMA  reduce 67


state 48
	GDecl : Type GidList . COLON  (61)
	GidList : GidList . COMMA Gid  (65)

	COLON  shift 64
	COMMA  shift 65
	.  error


state 49
	GidList : Gid .  (66)

	.  reduce 66


state 50
	MainBlock : INT MAIN . '(' ')' '{' LdeclBlock Body '}'  (90)
	MainBlock : INT MAIN . '(' ')' '{' Body '}'  (91)

	'('  shift 66
	.  error


state 51
	program : TypeDefBlock ClassdefBlock GdeclBlock FdefBlock MainBlock .  (1)

	.  reduce 1


state 52
	FdefBlock : FdefBlock Fdef .  (70)

	.  reduce 70


state 53
	Fdef : Type ID . '(' ParamList ')' '{' LdeclBlock Body '}'  (72)
	Fdef : Type ID . '(' ParamList ')' '{' Body '}'  (73)

	'('  shift 67
	.  error


state 54
	FieldDecl : TypeName ID COLON .  (10)

	.  reduce 10


state 55
	Fld : ID . ID COLON  (24)
	MDecl : ID . ID '(' MDeclParamList ')' COLON  (27)

	ID  shift 68
	.  error


state 56
	Fld : INT . ID COLON  (22)
	MDecl : INT . ID '(' MDeclParamList ')' COLON  (28)

	ID  shift 69
	.  error


state 57
	Fld : STR . ID COLON  (23)
	MDecl : STR . ID '(' MDeclParamList ')' COLON  (29)

	ID  shift 70
	.  error


state 58
	ClassDef : Cname '{' DECL Fieldlists . MethodDecl ENDDECL MethodDefns '}'  (15)
	ClassDef : Cname '{' DECL Fieldlists . ENDDECL '}'  (17)
	Fieldlists : Fieldlists . Fld  (20)

	ID  shift 55
	INT  shift 56
	STR  shift 57
	ENDDECL  shift 71
	.  error

	Fld  goto 72
	MethodDecl  goto 73
	MDecl  goto 61


state 59
	Fieldlists : Fld .  (21)

	.  reduce 21


state 60
	ClassDef : Cname '{' DECL MethodDecl . ENDDECL MethodDefns '}'  (16)
	MethodDecl : MethodDecl . MDecl  (25)

	ID  shift 74
	INT  shift 75
	STR  shift 76
	ENDDECL  shift 77
	.  error

	MDecl  goto 78


state 61
	MethodDecl : MDecl .  (26)

	.  reduce 26


state 62
	Gid : ID '(' . GParamList ')'  (69)
	GParamList : .  (88)

	ID  shift 18
	INT  shift 19
	STR  shift 20
	COMMA  reduce 88
	')'  reduce 88

	TypeName  goto 79
	GParamList  goto 80
	GParam  goto 81


state 63
	Gid : ID '[' . NUM ']'  (68)

	NUM  shift 82
	.  error


state 64
	GDecl : Type GidList COLON .  (61)

	.  reduce 61


state 65
	GidList : GidList COMMA . Gid  (65)

	ID  shift 47
	.  error

	Gid  goto 83


state 66
	MainBlock : INT MAIN '(' . ')' '{' LdeclBlock Body '}'  (90)
	MainBlock : INT MAIN '(' . ')' '{' Body '}'  (91)

	')'  shift 84
	.  error


state 67
	Fdef : Type ID '(' . ParamList ')' '{' LdeclBlock Body '}'  (72)
	Fdef : Type ID '(' . ParamList ')' '{' Body '}'  (73)
	ParamList : .  (84)

	ID  shift 18
	INT  shift 19
	STR  shift 20
	COMMA  reduce 84
	')'  reduce 84

	TypeName  goto 85
	ParamList  goto 86
	Param  goto 87


state 68
	Fld : ID ID . COLON  (24)
	MDecl : ID ID . '(' MDeclParamList ')' COLON  (27)

	COLON  shift 88
	'('  shift 89
	.  error


state 69
	Fld : INT ID . COLON  (22)
	MDecl : INT ID . '(' MDeclParamList ')' COLON  (28)

	COLON  shift 90
	'('  shift 91
	.  error


state 70
	Fld : STR ID . COLON  (23)
	MDecl : STR ID . '(' MDeclParamList ')' COLON  (29)

	COLON  shift 92
	'('  shift 93
	.  error


state 71
	ClassDef : Cname '{' DECL Fieldlists ENDDECL . '}'  (17)

	'}'  shift 94
	.  error


state 72
	Fieldlists : Fieldlists Fld .  (20)

	.  reduce 20


state 73
	ClassDef : Cname '{' DECL Fieldlists MethodDecl . ENDDECL MethodDefns '}'  (15)
	MethodDecl : MethodDecl . MDecl  (25)

	ID  shift 74
	INT  shift 75
	STR  shift 76
	ENDDECL  shift 95
	.  error

	MDecl  goto 78


state 74
	MDecl : ID . ID '(' MDeclParamList ')' COLON  (27)

	ID  shift 96
	.  error


state 75
	MDecl : INT . ID '(' MDeclParamList ')' COLON  (28)

	ID  shift 97
	.  error


state 76
	MDecl : STR . ID '(' MDeclParamList ')' COLON  (29)

	ID  shift 98
	.  error


state 77
	ClassDef : Cname '{' DECL MethodDecl ENDDECL . MethodDefns '}'  (16)

	ID  shift 99
	INT  shift 100
	STR  shift 101
	.  error

	MethodDefns  goto 102
	CFdef  goto 103


state 78
	MethodDecl : MethodDecl MDecl .  (25)

	.  reduce 25


state 79
	GParam : TypeName . ID  (89)

	ID  shift 104
	.  error


state 80
	Gid : ID '(' GParamList . ')'  (69)
	GParamList : GParamList . COMMA GParam  (86)

	COMMA  shift 105
	')'  shift 106
	.  error


state 81
	GParamList : GParam .  (87)

	.  reduce 87


state 82
	Gid : ID '[' NUM . ']'  (68)

	']'  shift 107
	.  error


state 83
	GidList : GidList COMMA Gid .  (65)

	.  reduce 65


state 84
	MainBlock : INT MAIN '(' ')' . '{' LdeclBlock Body '}'  (90)
	MainBlock : INT MAIN '(' ')' . '{' Body '}'  (91)

	'{'  shift 108
	.  error


state 85
	Param : TypeName . ID  (85)

	ID  shift 109
	.  error


state 86
	Fdef : Type ID '(' ParamList . ')' '{' LdeclBlock Body '}'  (72)
	Fdef : Type ID '(' ParamList . ')' '{' Body '}'  (73)
	ParamList : ParamList . COMMA Param  (82)

	COMMA  shift 110
	')'  shift 111
	.  error


state 87
	ParamList : Param .  (83)

	.  reduce 83


state 88
	Fld : ID ID COLON .  (24)

	.  reduce 24


state 89
	MDecl : ID ID '(' . MDeclParamList ')' COLON  (27)
	MDeclParamList : .  (35)

	ID  shift 112
	INT  shift 113
	STR  shift 114
	COMMA  reduce 35
	')'  reduce 35

	MDeclParam  goto 115
	MDeclParamList  goto 116


state 90
	Fld : INT ID COLON .  (22)

	.  reduce 22


state 91
	MDecl : INT ID '(' . MDeclParamList ')' COLON  (28)
	MDeclParamList : .  (35)

	ID  shift 112
	INT  shift 113
	STR  shift 114
	COMMA  reduce 35
	')'  reduce 35

	MDeclParam  goto 115
	MDeclParamList  goto 117


state 92
	Fld : STR ID COLON .  (23)

	.  reduce 23


state 93
	MDecl : STR ID '(' . MDeclParamList ')' COLON  (29)
	MDeclParamList : .  (35)

	ID  shift 112
	INT  shift 113
	STR  shift 114
	COMMA  reduce 35
	')'  reduce 35

	MDeclParam  goto 115
	MDeclParamList  goto 118


state 94
	ClassDef : Cname '{' DECL Fieldlists ENDDECL '}' .  (17)

	.  reduce 17


state 95
	ClassDef : Cname '{' DECL Fieldlists MethodDecl ENDDECL . MethodDefns '}'  (15)

	ID  shift 99
	INT  shift 100
	STR  shift 101
	.  error

	MethodDefns  goto 119
	CFdef  goto 103


state 96
	MDecl : ID ID . '(' MDeclParamList ')' COLON  (27)

	'('  shift 89
	.  error


state 97
	MDecl : INT ID . '(' MDeclParamList ')' COLON  (28)

	'('  shift 91
	.  error


state 98
	MDecl : STR ID . '(' MDeclParamList ')' COLON  (29)

	'('  shift 93
	.  error


state 99
	CFdef : ID . ID '(' CParamList ')' '{' LdeclBlock Body '}'  (48)
	CFdef : ID . ID '(' CParamList ')' '{' Body '}'  (49)

	ID  shift 120
	.  error


state 100
	CFdef : INT . ID '(' CParamList ')' '{' LdeclBlock Body '}'  (44)
	CFdef : INT . ID '(' CParamList ')' '{' Body '}'  (45)

	ID  shift 121
	.  error


state 101
	CFdef : STR . ID '(' CParamList ')' '{' LdeclBlock Body '}'  (46)
	CFdef : STR . ID '(' CParamList ')' '{' Body '}'  (47)

	ID  shift 122
	.  error


state 102
	ClassDef : Cname '{' DECL MethodDecl ENDDECL MethodDefns . '}'  (16)
	MethodDefns : MethodDefns . CFdef  (42)

	ID  shift 99
	INT  shift 100
	STR  shift 101
	'}'  shift 123
	.  error

	CFdef  goto 124


state 103
	MethodDefns : CFdef .  (43)

	.  reduce 43


state 104
	GParam : TypeName ID .  (89)

	.  reduce 89


state 105
	GParamList : GParamList COMMA . GParam  (86)

	ID  shift 18
	INT  shift 19
	STR  shift 20
	.  error

	TypeName  goto 79
	GParam  goto 125


state 106
	Gid : ID '(' GParamList ')' .  (69)

	.  reduce 69


state 107
	Gid : ID '[' NUM ']' .  (68)

	.  reduce 68


state 108
	MainBlock : INT MAIN '(' ')' '{' . LdeclBlock Body '}'  (90)
	MainBlock : INT MAIN '(' ')' '{' . Body '}'  (91)

	START  shift 126
	DECL  shift 127
	.  error

	LdeclBlock  goto 128
	Body  goto 129


state 109
	Param : TypeName ID .  (85)

	.  reduce 85


state 110
	ParamList : ParamList COMMA . Param  (82)

	ID  shift 18
	INT  shift 19
	STR  shift 20
	.  error

	TypeName  goto 85
	Param  goto 130


state 111
	Fdef : Type ID '(' ParamList ')' . '{' LdeclBlock Body '}'  (72)
	Fdef : Type ID '(' ParamList ')' . '{' Body '}'  (73)

	'{'  shift 131
	.  error


state 112
	MDeclParam : ID . ID  (41)

	ID  shift 132
	.  error


state 113
	MDeclParam : INT . ID  (39)

	ID  shift 133
	.  error


state 114
	MDeclParam : STR . ID  (40)

	ID  shift 134
	.  error


state 115
	MDeclParamList : MDeclParam .  (34)

	.  reduce 34


state 116
	MDecl : ID ID '(' MDeclParamList . ')' COLON  (27)
	MDeclParamList : MDeclParamList . COMMA MDeclParam  (33)

	COMMA  shift 135
	')'  shift 136
	.  error


state 117
	MDecl : INT ID '(' MDeclParamList . ')' COLON  (28)
	MDeclParamList : MDeclParamList . COMMA MDeclParam  (33)

	COMMA  shift 135
	')'  shift 137
	.  error


state 118
	MDecl : STR ID '(' MDeclParamList . ')' COLON  (29)
	MDeclParamList : MDeclParamList . COMMA MDeclParam  (33)

	COMMA  shift 135
	')'  shift 138
	.  error


state 119
	ClassDef : Cname '{' DECL Fieldlists MethodDecl ENDDECL MethodDefns . '}'  (15)
	MethodDefns : MethodDefns . CFdef  (42)

	ID  shift 99
	INT  shift 100
	STR  shift 101
	'}'  shift 139
	.  error

	CFdef  goto 124


state 120
	CFdef : ID ID . '(' CParamList ')' '{' LdeclBlock Body '}'  (48)
	CFdef : ID ID . '(' CParamList ')' '{' Body '}'  (49)

	'('  shift 140
	.  error


state 121
	CFdef : INT ID . '(' CParamList ')' '{' LdeclBlock Body '}'  (44)
	CFdef : INT ID . '(' CParamList ')' '{' Body '}'  (45)

	'('  shift 141
	.  error


state 122
	CFdef : STR ID . '(' CParamList ')' '{' LdeclBlock Body '}'  (46)
	CFdef : STR ID . '(' CParamList ')' '{' Body '}'  (47)

	'('  shift 142
	.  error


state 123
	ClassDef : Cname '{' DECL MethodDecl ENDDECL MethodDefns '}' .  (16)

	.  reduce 16


state 124
	MethodDefns : MethodDefns CFdef .  (42)

	.  reduce 42


state 125
	GParamList : GParamList COMMA GParam .  (86)

	.  reduce 86


state 126
	Body : START . Slist END  (81)

	NUM  shift 143
	ID  shift 144
	STRING_TYPE  shift 145
	ALLOC  shift 146
	INITIALIZE  shift 147
	FREE  shift 148
	NULLVAL  shift 149
	SELF  shift 150
	NEW  shift 151
	READ  shift 152
	WRITE  shift 153
	IF  shift 154
	WHILE  shift 155
	BREAK  shift 156
	CONT  shift 157
	RETURN  shift 158
	DELETE  shift 159
	'('  shift 160
	.  error

	expr  goto 161
	Slist  goto 162
	Stmt  goto 163
	InputStmt  goto 164
	OutputStmt  goto 165
	AsgStmt  goto 166
	IfStmt  goto 167
	WhileStmt  goto 168
	BreakStmt  goto 169
	ContinueStmt  goto 170
	FreeStmt  goto 171
	String  goto 172
	Retstmt  goto 173
	Field  goto 174
	FieldFunction  goto 175


state 127
	LdeclBlock : DECL . LDeclList ENDDECL  (74)
	LdeclBlock : DECL . ENDDECL  (75)

	ID  shift 18
	INT  shift 19
	STR  shift 20
	ENDDECL  shift 176
	.  error

	TypeName  goto 177
	LDeclList  goto 178
	LDecl  goto 179


state 128
	MainBlock : INT MAIN '(' ')' '{' LdeclBlock . Body '}'  (90)

	START  shift 126
	.  error

	Body  goto 180


state 129
	MainBlock : INT MAIN '(' ')' '{' Body . '}'  (91)

	'}'  shift 181
	.  error


state 130
	ParamList : ParamList COMMA Param .  (82)

	.  reduce 82


state 131
	Fdef : Type ID '(' ParamList ')' '{' . LdeclBlock Body '}'  (72)
	Fdef : Type ID '(' ParamList ')' '{' . Body '}'  (73)

	START  shift 126
	DECL  shift 127
	.  error

	LdeclBlock  goto 182
	Body  goto 183


state 132
	MDeclParam : ID ID .  (41)

	.  reduce 41


state 133
	MDeclParam : INT ID .  (39)

	.  reduce 39


state 134
	MDeclParam : STR ID .  (40)

	.  reduce 40


state 135
	MDeclParamList : MDeclParamList COMMA . MDeclParam  (33)

	ID  shift 112
	INT  shift 113
	STR  shift 114
	.  error

	MDeclParam  goto 184


state 136
	MDecl : ID ID '(' MDeclParamList ')' . COLON  (27)

	COLON  shift 185
	.  error


state 137
	MDecl : INT ID '(' MDeclParamList ')' . COLON  (28)

	COLON  shift 186
	.  error


state 138
	MDecl : STR ID '(' MDeclParamList ')' . COLON  (29)

	COLON  shift 187
	.  error


state 139
	ClassDef : Cname '{' DECL Fieldlists MethodDecl ENDDECL MethodDefns '}' .  (15)

	.  reduce 15


state 140
	CFdef : ID ID '(' . CParamList ')' '{' LdeclBlock Body '}'  (48)
	CFdef : ID ID '(' . CParamList ')' '{' Body '}'  (49)
	CParamList : .  (32)

	ID  shift 188
	INT  shift 189
	STR  shift 190
	COMMA  reduce 32
	')'  reduce 32

	CParamList  goto 191
	CParam  goto 192


state 141
	CFdef : INT ID '(' . CParamList ')' '{' LdeclBlock Body '}'  (44)
	CFdef : INT ID '(' . CParamList ')' '{' Body '}'  (45)
	CParamList : .  (32)

	ID  shift 188
	INT  shift 189
	STR  shift 190
	COMMA  reduce 32
	')'  reduce 32

	CParamList  goto 193
	CParam  goto 192


state 142
	CFdef : STR ID '(' . CParamList ')' '{' LdeclBlock Body '}'  (46)
	CFdef : STR ID '(' . CParamList ')' '{' Body '}'  (47)
	CParamList : .  (32)

	ID  shift 188
	INT  shift 189
	STR  shift 190
	COMMA  reduce 32
	')'  reduce 32

	CParamList  goto 194
	CParam  goto 192


state 143
	expr : NUM .  (128)

	.  reduce 128


state 144
	FieldFunction : ID . '.' ID '(' ArgList ')'  (52)
	FieldFunction : ID . '.' ID '(' ')'  (53)
	expr : ID .  (130)
	expr : ID . '[' expr ']'  (131)
	expr : ID . '(' ')'  (132)
	expr : ID . '(' ArgList ')'  (133)
	Field : ID . '.' ID  (142)

	'('  shift 195
	'.'  shift 196
	'['  shift 197
	PLUS  reduce 130
	MINUS  reduce 130
	MUL  reduce 130
	DIV  reduce 130
	MOD  reduce 130
	ASSG  reduce 130
	COLON  reduce 130
	LT  reduce 130
	LE  reduce 130
	GT  reduce 130
	GE  reduce 130
	EQ  reduce 130
	NE  reduce 130
	OR  reduce 130
	AND  reduce 130
	THEN  reduce 130
	DO  reduce 130
	COMMA  reduce 130
	')'  reduce 130
	']'  reduce 130


state 145
	String : STRING_TYPE .  (113)

	.  reduce 113


state 146
	expr : ALLOC . '(' ')'  (135)

	'('  shift 198
	.  error


state 147
	expr : INITIALIZE . '(' ')'  (136)

	'('  shift 199
	.  error


state 148
	FreeStmt : FREE . expr COLON  (111)

	NUM  shift 143
	ID  shift 144
	STRING_TYPE  shift 145
	ALLOC  shift 146
	INITIALIZE  shift 147
	NULLVAL  shift 149
	SELF  shift 150
	NEW  shift 151
	DELETE  shift 159
	'('  shift 160
	.  error

	expr  goto 200
	String  goto 172
	Field  goto 174
	FieldFunction  goto 175


state 149
	expr : NULLVAL .  (129)

	.  reduce 129


state 150
	FieldFunction : SELF . '.' ID '(' ArgList ')'  (54)
	FieldFunction : SELF . '.' ID '(' ')'  (55)
	Field : SELF . '.' ID  (143)

	'.'  shift 201
	.  error


state 151
	expr : NEW . '(' ID ')'  (138)

	'('  shift 202
	.  error


state 152
	InputStmt : READ . expr COLON  (106)

	NUM  shift 143
	ID  shift 144
	STRING_TYPE  shift 145
	ALLOC  shift 146
	INITIALIZE  shift 147
	NULLVAL  shift 149
	SELF  shift 150
	NEW  shift 151
	DELETE  shift 159
	'('  shift 160
	.  error

	expr  goto 203
	String  goto 172
	Field  goto 174
	FieldFunction  goto 175


state 153
	OutputStmt : WRITE . expr COLON  (107)

	NUM  shift 143
	ID  shift 144
	STRING_TYPE  shift 145
	ALLOC  shift 146
	INITIALIZE  shift 147
	NULLVAL  shift 149
	SELF  shift 150
	NEW  shift 151
	DELETE  shift 159
	'('  shift 160
	.  error

	expr  goto 204
	String  goto 172
	Field  goto 174
	FieldFunction  goto 175


state 154
	IfStmt : IF . expr THEN Slist ELSE Slist ENDIF COLON  (103)
	IfStmt : IF . expr THEN Slist ENDIF COLON  (104)

	NUM  shift 143
	ID  shift 144
	STRING_TYPE  shift 145
	ALLOC  shift 146
	INITIALIZE  shift 147
	NULLVAL  shift 149
	SELF  shift 150
	NEW  shift 151
	DELETE  shift 159
	'('  shift 160
	.  error

	expr  goto 205
	String  goto 172
	Field  goto 174
	FieldFunction  goto 175


state 155
	WhileStmt : WHILE . expr DO Slist ENDWHILE COLON  (105)
